Removed unneccessary tests